<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/WizardPageContainer">

    <TextView style="@style/WizardPageTitle" />

    <ScrollView android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView style="@style/WizardFormLabel"
                android:text="@string/label_name" />

            <EditText android:id="@+id/your_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:inputType="textCapWords"
                android:hint="@string/hint_name"
                android:layout_marginBottom="16dp" />

            <TextView style="@style/WizardFormLabel"
                android:text="@string/label_birth_day" />

            <EditText android:id="@+id/your_birth_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:inputType="date"
                android:layout_marginBottom="16dp"
                android:hint="@string/hint_optional" />

            <TextView style="@style/WizardFormLabel"
                android:text="@string/label_gender" />
            <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_width="fill_parent"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content" >
                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:orientation="horizontal" >
                    <RadioButton
                        android:id="@+id/rdbMale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:checked="true"
                        android:text="Male"
                        android:textSize="16sp"
                        />
                    <RadioButton
                        android:id="@+id/rdbFemale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="Female"
                        android:textSize="16sp"                      />
                </RadioGroup>
            </LinearLayout>

            <TextView style="@style/WizardFormLabel"
                android:text="@string/label_email" />

            <EditText android:id="@+id/your_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="16dp"
                android:hint="@string/hint_optional" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
